This fixes an issue where only the top-half of the section thumbnails were clickable.  I believe that, as a generalization, elements that appear lower in the HTML definition of the page have a higher z-index, so the .builder element, with it's padding at the top (to clear the navigation bar actually), was layered above the navigation bar and so click/hover events and styles weren't working.

--- a/static/less/builder.less
+++ b/static/less/builder.less
@@ -700,6 +700,7 @@
   width: 100%;
   top: 40px;
   background-color: @control-color-1;
+  z-index: 999;
 }
 
 .workflow-nav {
